Dynamically-generate-the-header-and-footer Ready yaygit add .

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -130,6 +130,7 @@ footer section {
 }
 .links a {
   text-decoration: none;
+  color: var(--accent2-color-black);
 }
 .links li {
   margin-bottom: .5rem;
