change the name about for my reflexions

--- a/src/public/partials/nav.html
+++ b/src/public/partials/nav.html
@@ -1,5 +1,5 @@
 <ul>
     <li><a href="/index.html" title="Home">Home</a></li>
     <li><a href="/challenges/" title="Challenges">Challenges</a></li>
-    <li><a href="/about/" title="About">About</a></li>
+    <li><a href="/my-reflections/" title="My Reflections">My Reflections</a></li>
 </ul>
