--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -22,7 +22,7 @@
                 <ul class="links">
                     <li><a href="/index.html" title="Home">Home</a></li>
                     <li><a href="/challenges/" title="Challenges">Challenges</a></li>
-                    <li><a href="/about/" title="About">About</a></li>
+                    <li><a href="/my-reflections/" title="My Reflections">My Reflections</a></li>
                 </ul>
             </nav>
         </section>
